# cs224w-movie-recs

./: .gitignore  CLAUDE.md  DATASETS.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml  config_gat.yaml
configs/data/: movielens.yaml  movielens_1m.yaml  movielens_32m.yaml  movielens_small.yaml
configs/evaluator/: default.yaml  low_memory.yaml
configs/loss/: bpr.yaml
configs/model/: gat.yaml  hgt.yaml  lightgcn.yaml  two_tower.yaml
configs/sweeper/: default.yaml  gat.yaml  hgt.yaml
configs/trainer/: default.yaml  gat_trainer.yaml  tuning.yaml
runs/movielens/GAT/bpr/: default.pth
runs/movielens/HGT/bpr/: default.pth
scripts/: evaluate.py  generate_predictions.py  get_recommendations.py  load_data.py  package_models.sh  run_experiment.py  train.py  tune.py
src/proj/data/: movielens.py
src/recommender/data/: __init__.py  download_data.py  movielens.py
src/recommender/evaluation/: detailed_evaluator.py  evaluator.py
src/recommender/losses/: bpr.py
src/recommender/models/: gat.py  hgt.py  layers.py  lightgcn.py  model_helpers.py  two_tower.py
src/recommender/reranker/: README.md  __init__.py  ai_client.py  schemas.py
src/recommender/training/: gat_trainer.py  simple_trainer.py
src/recommender/utils/: device.py  module_loader.py
tests/: conftest.py
tests/data/: test_movielens.py
tests/evaluation/: test_evaluator.py
tests/losses/: test_bpr.py
tests/models/: test_gat.py  test_hgt.py  test_lightgcn.py  test_two_tower.py
tests/reranker/: __init__.py  test_ai_client.py
(+2 files in other folders)
