[project]
name = "recommender"
version = "0.1.0"
dependencies = [
    "torch",
    "torch-geometric",
    "pandas",
    "numpy",
    "requests",
    "hydra-core>=1.3",
    "hydra-optuna-sweeper>=1.2",
    "omegaconf>=2.3",
    "together>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest >=8",
    "pytest-cov>=5"
]

[tool.setuptools.packages.find]
where = ["src"]